2008-01-16  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c: Fix indentation.

2008-01-16  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-divert.pl: Use :errno_h from POSIX.
	($enoent): Remove variable.
	(ENOENT): Remove function.
	* scripts/update-alternatives.pl: Likewise.
	* utils/Makefile.am (pkglib_PROGRAMS): Remove variable.
	(enoent_SOURCES): Likewise.
	* utils/enoent.c: Remove file.

2008-01-16  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (do_build): Use NULL instead of 0.
	* dpkg-deb/extract.c (extracthalf, do_fsystarfile): Likewise.
	* dpkg-deb/info.c (info_prepare, info_spew): Likewise.
	(do_contents, do_field): Likewise.
	* dpkg-deb/main.c (cipaction, action, cmdinfos, main): Likewise.
	* dpkg-split/join.c (do_join): Likewise.
	* dpkg-split/queue.c (do_auto): Likewise.
	* lib/dpkg.h (standard_startup, standard_shutdown): Likewise.
	* src/archives.c (destroyobstack, deconfigure, addfiletolist)
	(tarobject, check_breaks, check_conflict, archivefiles)
	(newconff_append): Likewise.
	* src/configure.c (deferred_configure, conffderef, md5hash): Likewise.
	* src/depcon.c (findbreakcyclerecursive, findbreakcycle)
	(depisok): Likewise.
	* src/enquiry.c (limiteddescription, badstatinfos, unpackchk)
	(assertversion, assertpredep, assertepoch, assertlongfilenames)
	(assertmulticonrep, predeppackage, cmpversions): Likewise.
	* src/errors.c (reports, print_error_perpackage): Likewise.
	* src/filesdb.c (diversions, diversionsfile, statoverridefile)
	(ensure_packagefiles_available, ensure_allinstfiles_available)
	(write_filelist_except, reversefilelist_init, reversefilelist_next)
	(ensure_diversions, iterfilestart, iterfilenext, filesdbinit)
	(findnamenode): Likewise.
	* src/help.c (checkpath, ensure_package_clientdata
	(vbuildarglist, cu_restorescriptsignals, script_catchsignals)
	(clear_istobes): Likewise.
	* src/main.c (cipaction, ignoredepends, forceinfos)
	(ACTION, OBSOLETE, ACTIONBACKEND, cmdinfos)