@@ -6,6 +6,9 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   * Do not warn about unrecognized Homepage field in binary package stanzas
     in dpkg-genchanges and dpkg-source. Closes: #460309
   * Do not use the enoent helper binary, and use perl POSIX module instead.
+  * Keep checking for the process when start-stop-daemon is called with
+    --retry even if the daemon removed the pidfile. Closes: #460903
+    Thanks to Justin Pryzby for the analysis.
 
   [ Frank Lichtenheld ]
   * Make the -L option of dpkg-parsechangelog actually work (it's
