@@ -1,5 +1,10 @@
 2008-01-16  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c (do_pidfile): Cache pid value over
+	multiple calls.
+
+2008-01-16  Guillem Jover  <guillem@debian.org>
+
 	* utils/start-stop-daemon.c: Fix indentation.
 
 2008-01-16  Guillem Jover  <guillem@debian.org>
